# hierarchical-data-structure

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: May06.md
include/: BCTNode.hpp  BoundingBox.hpp  Connection.hpp  Family.hpp  KAryTree.hpp
src/: BCTNode.cpp  BoundingBox.cpp  Connection.cpp  Family.cpp  main.cpp  temp.cpp
